[tool.poetry]
name = "vocal_melody"
version = "0.1.0"
description = ""
authors = ["koiking213 <koiking213@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
librosa = "^0.9.2"
pretty_midi = "^0.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
